UPDATE: Pentaho Server 7.1 is not running when installed on host machine. Letting install only server and data integration by the first installation.